# respoke

./: .gitignore  .nxignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  nx.json  package-lock.json  package.json
.claude/commands/: context-build.md
.claude/skills/context-build/: SKILL.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
.intent/: config.json
apps/api/: CLAUDE.md  Cargo.toml  project.json
apps/api/src/: auth_policy.rs  cookies.rs  embedded_ui.rs  extractor.rs  lib.rs  main.rs  mgmt_auth.rs  openapi.rs  seed.rs  server.rs  state.rs
apps/api/src/connector/: invoker.rs
apps/api/src/routes/: jwks.rs  mod.rs
apps/api/src/routes/auth/: magic_link.rs  mod.rs  otp.rs  password.rs  saml.rs  session.rs
apps/api/src/routes/emulator/: idp_oidc.rs  idp_saml.rs  mod.rs  snapshot.rs
apps/api/src/routes/mgmt/: access_keys.rs  auth_method_config.rs  connectors.rs  custom_attributes.rs  idp.rs  jwt.rs  jwt_templates.rs  mod.rs  permissions.rs  roles.rs  tenant.rs  user.rs
apps/docs/: .gitignore  CLAUDE.md  astro.config.mjs  package-lock.json  package.json  project.json
apps/docs/public/: demo-sw.js
apps/integration-api/: CLAUDE.md  package-lock.json  package.json  project.json  tsconfig.json  vitest.config.ts
apps/integration-api/helpers/: client.ts  sdk-client.ts
apps/integration-api/setup/: global-setup.ts
apps/integration-api/tests/: claims-contract.test.ts  cross-flow.test.ts  idp-oidc.test.ts  idp-saml.test.ts  lifecycle.test.ts  magic-link-extended.test.ts  magic-link.test.ts  mgmt-idp.test.ts  mgmt-jwt.test.ts  mgmt-tenant.test.ts  mgmt-user-completeness.test.ts  mgmt-user-extended.test.ts  mgmt-user-search.test.ts  mgmt-user.test.ts  otp-extended.test.ts  password.test.ts  saml.test.ts  sdk.test.ts  session-extended.test.ts  session.test.ts  validation-limits.test.ts
apps/integration-sdk-js/: CLAUDE.md  package-lock.json  package.json  project.json  tsconfig.json  vitest.config.ts
apps/integration-sdk-js/helpers/: sdk.ts
apps/integration-sdk-js/tests/: cross-flow.sdk.test.ts  magic-link.sdk.test.ts  mgmt.sdk.test.ts  otp.sdk.test.ts  password.sdk.test.ts  saml.sdk.test.ts  session.sdk.test.ts  workflow-1-passwordless.sdk.test.ts  workflow-2-mfa.sdk.test.ts  workflow-3-b2b-sso.sdk.test.ts  workflow-4-fraud-prevention.sdk.test.ts  workflow-5-m2m-access-keys.sdk.test.ts  (+2 more)
apps/integration-sdk-nodejs/: CLAUDE.md  package-lock.json  package.json  project.json  tsconfig.json  vitest.config.ts
apps/nestjs-angular-sample/: CLAUDE.md  package-lock.json  package.json  playwright.config.ts  playwright.local.config.ts  project.json
apps/platform-tests/: CLAUDE.md  package-lock.json  package.json  project.json  tsconfig.json  vitest.config.ts
apps/playground/: CLAUDE.md  package.json
apps/rescope-wasm/: CLAUDE.md  Cargo.toml  index.html
apps/rescope-wasm/src/: lib.rs
apps/sample-app/: .env.example  CLAUDE.md  package-lock.json  package.json  playwright.config.ts  project.json  tsconfig.e2e.json
apps/ui/: CLAUDE.md  package-lock.json  package.json  playwright.config.ts  project.json  vite.config.ts
docs/: descope-import-export.md  descope-market-research.md  feature-summaries.md  gap-analysis.md  ui-serving-options.md
libs/rescope-core/: CLAUDE.md  Cargo.toml
libs/rescope-core/src/: config.rs  error.rs  lib.rs  types.rs
libs/rescope-core/src/jwt/: key_manager.rs  mod.rs  token_generator.rs  token_validator.rs
libs/rescope-core/src/store/: access_key_store.rs  auth_method_config.rs  connector_store.rs  custom_attribute_store.rs  idp_store.rs  jwt_template_store.rs  mod.rs  otp_store.rs  permission_store.rs  revocation_store.rs  role_store.rs  tenant_store.rs  token_store.rs  user_store.rs
scripts/: coverage-all.sh  coverage-integration.sh  release-build.sh  seed-users.sh
spike/wasm-poc/: Cargo.toml  index.html  sw.js
spike/wasm-poc/src/: lib.rs  router.rs  store.rs  types.rs
(+281 files in other folders)
