[package]
name = "rescope"
version = "0.1.0"
edition = "2021"

[features]
default = []
dev-ui = []

[lib]
name = "rescope"
path = "src/lib.rs"

[[bin]]
name = "rescope"
path = "src/main.rs"


[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }

# Embedded UI assets
rust-embed = { version = "8", features = ["interpolate-folder-path"] }
mime_guess = "2"

# JWT + crypto
jsonwebtoken = { version = "9", features = ["use_pem"] }
rsa = { version = "0.9", features = ["pem"] }
anyhow = "1"
sha2 = "0.10"

# Auth
bcrypt = "0.15"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
hex = "0.4"
base64 = "0.22"

# Error handling
thiserror = "1"

# HTTP client (connector invocation)
reqwest = { version = "0.12", features = ["json"] }
scopeguard = "1"

# Core business logic (sync, framework-agnostic)
rescope-core = { path = "../../libs/rescope-core", features = ["axum", "native-crypto"] }

# URL encoding for OIDC endpoints
urlencoding = "2"
serde_urlencoded = "0.7"

# SAML support
rcgen = "0.13"
flate2 = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
axum-test = "15"
serde_json = "1"
tempfile = "3"
