[package]
name = "rescope-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
# Core business logic — no native-crypto (skips ring/jsonwebtoken)
rescope-core = { path = "../../libs/rescope-core", default-features = false }

# WASM bindings
wasm-bindgen = "0.2"

# These pull in the `js` feature so getrandom/uuid work in WASM
getrandom = { version = "0.2", features = ["js"] }
uuid = { version = "1", features = ["v4", "js"] }

# Serialization for the WASM<->JS boundary
serde = { version = "1", features = ["derive"] }
serde_json = "1"
