[package]
name = "rescope-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "rescope_core"
path = "src/lib.rs"

[features]
default = ["native-crypto"]
# native-crypto: enables jsonwebtoken + ring + rcgen (not WASM-compatible)
native-crypto = ["dep:jsonwebtoken", "dep:rcgen", "dep:flate2"]
# axum: enables IntoResponse impl for EmulatorError
axum = ["dep:axum"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
hex = "0.4"
base64 = "0.22"
sha2 = "0.10"
bcrypt = "0.15"
tracing = "0.1"

# RSA key generation (pure Rust — WASM compatible)
rsa = { version = "0.9", features = ["pem"] }

# JWT signing/validation (depends on ring — NOT WASM compatible)
jsonwebtoken = { version = "9", features = ["use_pem"], optional = true }

# URL encoding
urlencoding = "2"
serde_urlencoded = "0.7"

# SAML support (depends on ring via rcgen — not WASM compatible)
rcgen = { version = "0.13", optional = true }
flate2 = { version = "1", optional = true }

# Optional: axum integration (IntoResponse for EmulatorError)
axum = { version = "0.7", optional = true }

[dev-dependencies]
serde_json = "1"
