[package]
name = "rescope-wasm-poc"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"

# UUID generation — needs `js` feature for WASM (uses crypto.getRandomValues)
uuid = { version = "1", features = ["v4", "js"] }

# RSA key generation — pure Rust, WASM-compatible (unlike ring)
rsa = { version = "0.9", features = ["pem"] }
sha2 = "0.10"
rand = "0.8"

# getrandom needs `js` feature for WASM (wasm32-unknown-unknown)
getrandom = { version = "0.2", features = ["js"] }

[profile.release]
lto = true
opt-level = "s"
